# assignment_4

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
shapes/: CMakeLists.txt  Isosceles.cpp  Isosceles.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Shape.cpp  Shape.h  SlotMachine.cpp  SlotMachine.h  Triangle.cpp  Triangle.h
